--- a/index.html
+++ b/index.html
@@ -3,14 +3,37 @@
   <head>
     <link  href="./resources/css/style.css" type ="text/css" rel="stylesheet">
     <meta charset="utf-8">
-    <title>Excursion App</title>
+    <title>Excursion</title>
   </head>
   <body>
 
     <!--Top Billboard Section -->
     <div class="billboard">
       <h1> Discover hidden places in the world around you </h1>
+
       <a href="*">Download Excursion (Coming soon!)</a>
     </div>
+
+    <video src="./resources/videos/excursion.mp4" autoplay loop>
+      Buy the App
+    </video>
+
+    <h2>Your personal travel guide</h2>
+
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+    <img src="./resources/images/camp.jpg"><br><br>
+
+    <img src="./resources/images/phone.png">
+
+    <h2>Coming Soon for iPhone and Android</h2>
+
+    <a href="*">Download Excursion (Coming soon!)</a>
+
+    <!--Footer -->
+    <div class="footer">
+      <p class="alignright">&copy; Excursion</p>
+    </div>
+
   </body>
 </html>
